--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:autoText="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Nome da Sala"
+        android:textColorLink="@android:color/background_light"
+        tools:layout_editor_absoluteX="85dp"
+        tools:layout_editor_absoluteY="150dp" />
 </android.support.constraint.ConstraintLayout>
