--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="216dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/Lato-Regular"
         android:text="JOGAR"
         android:textSize="30sp" />
 
