--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,16 @@
         android:text="JOGAR"
         android:textSize="30sp" />
 
+    <TextView
+        android:id="@+id/regrajogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="86dp"
+        android:fontFamily="@font/lato"
+        android:text="Regra do Jogo"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
 </RelativeLayout>
