--- a/app/src/main/res/layout/activity_placar.xml
+++ b/app/src/main/res/layout/activity_placar.xml
@@ -11,13 +11,13 @@
     <TextView
         android:id="@+id/placar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:background="@android:color/white"
-        android:fontFamily="@font/lato"
-        android:text="Placar:"
+        android:fontFamily="@font/latoBlackItalic"
+        android:text="PLACAR:"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="20pt" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -39,9 +39,10 @@
         android:id="@+id/rodada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/latoItalic"
         android:text="Rodada:"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
 </LinearLayout>
