--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -7,39 +7,44 @@
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:padding="6dp">
 
         <TextView
-            android:id="@+id/titulo"
-            android:layout_width="219dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="12dp"
-            android:layout_toEndOf="@+id/imageView2"
-            android:fontFamily="@font/lato"
+            android:id="@+id/nome"
+            android:layout_width="185dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/latoLightItalic"
             android:textColor="@android:color/black"
-            android:textSize="24sp" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="112dp"
-            android:layout_height="98dp"
-            android:src="@mipmap/ic_launcher_round" />
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/mensagem"
-            android:layout_width="219dp"
-            android:layout_height="34dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="62dp"
-            android:layout_marginEnd="37dp"
-            android:fontFamily="@font/lato"
-            android:textColor="@android:color/black" />
-    </RelativeLayout>
+            android:id="@+id/pontjogo"
+            android:layout_width="62dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/latoBlackItalic"
+            android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/pontrodada"
+            android:layout_width="62dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="100dp"
+            android:fontFamily="@font/latoBoldItalic"
+            android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
