--- a/app/src/main/res/layout/activity_placar.xml
+++ b/app/src/main/res/layout/activity_placar.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="@android:color/white"
-        android:fontFamily="@font/latoBlackItalic"
+        android:fontFamily="@font/latoblackitalic"
         android:text="PLACAR:"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_light"
@@ -39,7 +39,7 @@
         android:id="@+id/rodada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/latoItalic"
+        android:fontFamily="@font/latoitalic"
         android:text="Rodada:"
         android:textAlignment="center"
         android:textColor="@android:color/black"
