--- a/app/src/main/res/layout/activity_sobre.xml
+++ b/app/src/main/res/layout/activity_sobre.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="350dp"
-        android:fontFamily="@font/latoRegular"
+        android:fontFamily="@font/latoregular"
         android:text="Alunos"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
@@ -38,7 +38,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="113dp"
         android:layout_marginBottom="219dp"
-        android:fontFamily="@font/latoRegular"
+        android:fontFamily="@font/latoregular"
         android:text="•	Danilo Mative\n• Fernando Alves \n• Guilherme Lucioni\n• Victor Trindade "
         android:textColor="@android:color/black"
         android:textSize="24sp" />
