--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/latolightitalic"
-            android:textColor="@android:color/black"
+            android:textColor="#2BACB5"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +31,9 @@
             android:layout_height="36dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/latolightitalic"
-            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:textColor="#2BACB5"
+            android:fontFamily="@font/latoblackitalic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,8 +43,9 @@
             android:layout_height="36dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="100dp"
+            android:textSize="24sp"
             android:fontFamily="@font/latobolditalic"
-            android:textColor="@android:color/black"
+            android:textColor="#E84D5B"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
