--- a/app/src/main/res/drawable/pop_bg.xml
+++ b/app/src/main/res/drawable/pop_bg.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <gradient
-        android:startColor="#2BADB5"
-        android:endColor="#B4CCB9"
-        android:angle="270"
-        />
-
-    <corners
-        android:radius="50dp"
-        />
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<corners android:radius="50dp"/>
+<padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
+<solid android:color="#2BADB5"/>
 </shape>
