--- a/app/src/main/res/layout/activity_pop_up_votar.xml
+++ b/app/src/main/res/layout/activity_pop_up_votar.xml
@@ -4,7 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pop_bg"
-    tools:context=".PopUpVotar">
+    android:background="@drawable/pop_bg">
 
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/pop_border"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
+
+        <TextView
+            android:id="@+id/txtCandidato"
+            android:layout_width="205dp"
+            android:layout_height="47dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="CANDIDATO"
+            android:textColor="#2BADB5"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtCandidato2"
+            android:layout_width="178dp"
+            android:layout_height="51dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:text="CANDIDATO"
+            android:textColor="#2BADB5"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidato" />
+
+        <Button
+            android:id="@+id/btnCancelar"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/pop_cancelar"
+            android:text="Cancelar"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnSim"
+            app:layout_constraintVertical_bias="0.117" />
+
+        <TextView
+            android:id="@+id/txtPromover"
+            android:layout_width="109dp"
+            android:layout_height="46dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:text="Promover"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/txtCandidato2"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidato" />
+
+        <Button
+            android:id="@+id/btnSim"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="SIM"
+            android:textColor="#F5ECD9"
+            android:background="@drawable/pop_selecionar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidato2" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
