--- a/app/src/main/res/layout/activity_pop_up_selecionar.xml
+++ b/app/src/main/res/layout/activity_pop_up_selecionar.xml
@@ -4,14 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:background="@drawable/pop_bg">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/pop_border">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/pop_border"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="90dp">>
 
+        <Button
+            android:id="@+id/btnCancelar"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/pop_cancelar"
+            android:text="Cancelar"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnSenador"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="52dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/pop_selecionar"
+            android:text="VEREADOR"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnGovernador"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/pop_selecionar"
+            android:text="GORVERNADOR"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toTopOf="@+id/btnPrefeito"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnPrefeito"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/pop_selecionar"
+            android:text="PREFEITO"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toTopOf="@+id/btnSenador"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnVereador"
+            android:layout_width="218dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/pop_selecionar"
+            android:text="VEREADOR"
+            android:textColor="#F5ECD9"
+            app:layout_constraintBottom_toTopOf="@+id/btnGovernador"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txtCandidato"
+            android:layout_width="205dp"
+            android:layout_height="47dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="CANDIDATO"
+            android:textColor="#2BADB5"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/txtCandidato2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.454"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.959" />
+
+        <TextView
+            android:id="@+id/txtPromover"
+            android:layout_width="109dp"
+            android:layout_height="46dp"
+            android:layout_marginBottom="16dp"
+            android:text="Promover"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/btnVereador"
+            tools:layout_editor_absoluteX="26dp" />
+
+        <TextView
+            android:id="@+id/txtCandidato2"
+            android:layout_width="172dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:text="CANDIDATO"
+            android:textColor="#2BADB5"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/btnVereador"
+            app:layout_constraintStart_toEndOf="@+id/txtPromover" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
