--- a/app/src/main/res/layout/activity_pop_up_votar.xml
+++ b/app/src/main/res/layout/activity_pop_up_votar.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="100dp"
     android:background="@drawable/pop_bg">
 
 
