--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,61 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".home">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="650dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/white"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-
-
-    </ScrollView>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-    </HorizontalScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="111dp"
-                android:layout_height="8dp"
-                android:layout_weight="1"
-                tools:src="@tools:sample/avatars" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="110dp"
-                android:layout_height="362dp"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
-    </LinearLayout>
+    tools:context=".Principal">
 
 </android.support.constraint.ConstraintLayout>
