--- a/app/src/main/res/layout/activity_pop_up_selecionar.xml
+++ b/app/src/main/res/layout/activity_pop_up_selecionar.xml
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="90dp">>
 
         <Button
-            android:id="@+id/btnCancelar"
+            android:id="@+id/btnCancelarSelecionar"
             android:layout_width="218dp"
             android:layout_height="49dp"
             android:layout_marginBottom="40dp"
@@ -34,13 +34,13 @@
             android:id="@+id/btnSenador"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="52dp"
+            android:layout_marginBottom="44dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/pop_selecionar"
             android:text="VEREADOR"
             android:textColor="#F5ECD9"
-            app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancelarSelecionar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -76,59 +76,62 @@
             android:id="@+id/btnVereador"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/pop_selecionar"
             android:text="VEREADOR"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toTopOf="@+id/btnGovernador"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidatoSelecionar"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
-            android:id="@+id/txtCandidato"
+            android:id="@+id/txtCandidatoSelecionar"
             android:layout_width="205dp"
             android:layout_height="47dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="116dp"
             android:layout_marginTop="8dp"
             android:text="CANDIDATO"
             android:textColor="#2BADB5"
             android:textSize="36sp"
             android:textStyle="bold"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/txtCandidato2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.454"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.959" />
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidatoSelecionar2" />
 
         <TextView
-            android:id="@+id/txtPromover"
+            android:id="@+id/txtSelecionar"
             android:layout_width="109dp"
             android:layout_height="46dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
             android:text="Promover"
             android:textSize="24sp"
             android:typeface="sans"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/btnVereador"
-            tools:layout_editor_absoluteX="26dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCandidatoSelecionar2" />
 
         <TextView
-            android:id="@+id/txtCandidato2"
+            android:id="@+id/txtCandidatoSelecionar2"
             android:layout_width="172dp"
             android:layout_height="48dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="CANDIDATO"
             android:textColor="#2BADB5"
             android:textSize="30sp"
             android:textStyle="bold"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/btnVereador"
-            app:layout_constraintStart_toEndOf="@+id/txtPromover" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
