--- a/app/src/main/res/layout/activity_placar.xml
+++ b/app/src/main/res/layout/activity_placar.xml
@@ -6,7 +6,7 @@
 
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".placar">
+    tools:context=".Placar">
 
     <TextView
         android:id="@+id/placar"
