--- a/app/src/main/res/layout/activity_pop_up_selecionar.xml
+++ b/app/src/main/res/layout/activity_pop_up_selecionar.xml
@@ -111,7 +111,7 @@
             android:layout_width="109dp"
             android:layout_height="46dp"
             android:layout_marginTop="8dp"
-            android:text="Promover"
+            android:text="Posicionar"
             android:textSize="24sp"
             android:typeface="sans"
             android:visibility="visible"
